<resources>
    <string name="app_name">StoryApp</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="camerax">CameraX</string>
    <string name="upload">Upload</string>
    <string name="write_a_description">Write a description</string>
    <string name="description">Description</string>
    <string name="story_kuy">Story Kuy</string>
    <string name="date">Date</string>
    <string name="maps">Maps</string>
</resources>